--- a/index.html
+++ b/index.html
@@ -41,38 +41,48 @@
       </div>
 
       <section>
-        <h5>ATTENTION TO DETAILS</h5>
-        <p>
-          We go into all the details and processes of your business to develop a
-          customized solution.
-        </p>
+        <div>
+          <h5>ATTENTION TO DETAILS</h5>
+          <p>
+            We go into all the details and processes of your business to develop
+            a customized solution.
+          </p>
+        </div>
 
-        <h5>PUNCTUALITY</h5>
-        <p>
-          With us, you can feel safe and secure. An important principle of the
-          company: respect your time and deadlines.
-        </p>
+        <div>
+          <h5>PUNCTUALITY</h5>
+          <p>
+            With us, you can feel safe and secure. An important principle of the
+            company: respect your time and deadlines.
+          </p>
+        </div>
 
-        <h5>PLANNING</h5>
-        <p>
-          You will be able to observe and participate in every phase of solution
-          development and implementation.
-        </p>
+        <div>
+          <h5>PLANNING</h5>
+          <p>
+            You will be able to observe and participate in every phase of
+            solution development and implementation.
+          </p>
+        </div>
 
-        <h5>MODERN TECHNOLOGIES</h5>
-        <p>
-          We use innovative tools to solve assigned tasks. It's time to simplify
-          work processes.
-        </p>
+        <div>
+          <h5>MODERN TECHNOLOGIES</h5>
+          <p>
+            We use innovative tools to solve assigned tasks. It's time to
+            simplify work processes.
+          </p>
+        </div>
       </section>
       <!-- what we do section -->
 
       <div>
         <h2>What we do</h2>
 
-        <img src="images/code.jpg" alt="Coding" width="370" />
-        <img src="images/apps.jpg" alt="Applications" width="370" />
-        <img src="images/design.jpg" alt="Web design" width="370" />
+        <ul>
+          <li><img src="images/code.jpg" alt="Coding" width="370" /></li>
+          <li><img src="images/apps.jpg" alt="Applications" width="370" /></li>
+          <li><img src="images/design.jpg" alt="Web design" width="370" /></li>
+        </ul>
       </div>
 
       <!-- our team section -->
