Adaugare div la prima sectiune
Am adaugat tagul div la prima sectiune.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
         </ul>
       </nav>
 
-      <img src="images/Vector1.png" alt="Coursor1" />
+      <div>
+        <img src="images/Vector1.png" alt="Coursor1" />
+      </div>
 
-      <img src="images/Vector2.png" alt="Coursor2" />
+      <div>
+        <img src="images/Vector2.png" alt="Coursor2" />
+      </div>
 
-      <a href="info@devstudio.com">info@devstudio.com</a>
+      <div>
+        <a href="info@devstudio.com">info@devstudio.com</a>
+      </div>
 
-      <a href="tel:+1212-772-4150">+1212-772-4150</a>
+      <div>
+        <a href="tel:+1212-772-4150">+1212-772-4150</a>
+      </div>
     </header>
     <hr />
 
